syntax = "proto3";

option go_package = "sigmaos/kernelsrv/proto";

message BootRequest {
  string name = 1;
  repeated string args = 2;
}

message BootResult {
  string pidStr = 1;
}

message SetCPUSharesRequest {
  string PidStr = 1;
  int64 Shares = 2;
}

message SetCPUSharesResponse {
}

message GetCPUUtilRequest {
  string PidStr = 1;
}

message GetCPUUtilResponse {
  double util = 1;
}

message ShutdownRequest {
}

message ShutdownResult {
}

message KillRequest {
  string name = 1;
}

message KillResult {
}


